fix: make button text alignment customizable

--- a/src/styles/lib.scss
+++ b/src/styles/lib.scss
@@ -83,6 +83,10 @@ input {
   padding: 0;
 }
 
+button {
+  padding: 0;
+}
+
 /* recommended css code for vue-svgicon */
 .svg-icon {
   display: inline-block;
